--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: okraus <okraus@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/14 13:43:18 by okraus            #+#    #+#              #
-#    Updated: 2023/08/17 14:59:52 by okraus           ###   ########.fr        #
+#    Updated: 2023/11/18 16:42:10 by okraus           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ ECHO		=	echo "[`expr ${HIT_COUNT1} '*' 100 / ${HIT_TOTAL}`%]"
 endif
 
 NAME		=	libft.a
-INCS		=	libft.h
+INCS		=	header/libft.h
 LIBC		=	ar rcs
 CC 			=	cc
 CFLAGS		=	-Wall -Wextra -Werror -g
@@ -30,10 +30,10 @@ SLEEP		=	#sleep 0.5
 
 # SOURCES
 
-SRC			=	$(addprefix $(SRC_LIB_DIR), $(addsuffix .c, $(SRC_LIB))) \
-				$(addprefix $(SRC_EX_DIR), $(addsuffix .c, $(SRC_EX))) \
-				$(addprefix $(SRC_GNL_DIR), $(addsuffix .c, $(SRC_GNL))) \
-				$(addprefix $(SRC_PF_DIR), $(addsuffix .c, $(SRC_PF)))
+SRC			=	$(addprefix $(SRC_LIB_DIR), $(SRC_LIB)) \
+				$(addprefix $(SRC_EX_DIR), $(SRC_EX)) \
+				$(addprefix $(SRC_GNL_DIR), $(SRC_GNL)) \
+				$(addprefix $(SRC_PF_DIR), $(SRC_PF))
 
 # Source directories
 
@@ -44,103 +44,108 @@ SRC_PF_DIR	=	src_ft_printf/
 
 # Original Libft functions
 
-SRC_LIB		=	ft_atoi \
-				ft_bzero \
-				ft_calloc \
-				ft_isalnum \
-				ft_isalpha \
-				ft_isascii \
-				ft_isdigit \
-				ft_isprint \
-				ft_itoa \
-				ft_lstadd_back \
-				ft_lstadd_front \
-				ft_lstclear \
-				ft_lstdelone \
-				ft_lstiter \
-				ft_lstlast \
-				ft_lstmap \
-				ft_lstnew \
-				ft_lstsize \
-				ft_memchr \
-				ft_memcmp \
-				ft_memcpy \
-				ft_memmove \
-				ft_memset \
-				ft_putchar_fd \
-				ft_putendl_fd \
-				ft_putnbr_fd \
-				ft_putstr_fd \
-				ft_split \
-				ft_strchr \
-				ft_strdup \
-				ft_striteri \
-				ft_strjoin \
-				ft_strlcat \
-				ft_strlcpy \
-				ft_strlen \
-				ft_strmapi \
-				ft_strncmp \
-				ft_strnstr \
-				ft_strrchr \
-				ft_strtrim \
-				ft_substr \
-				ft_tolower \
-				ft_toupper
+SRC_LIB		=	ft_atoi.c \
+				ft_bzero.c \
+				ft_calloc.c \
+				ft_isalnum.c \
+				ft_isalpha.c \
+				ft_isascii.c \
+				ft_isdigit.c \
+				ft_isprint.c \
+				ft_itoa.c \
+				ft_lstadd_back.c \
+				ft_lstadd_front.c \
+				ft_lstclear.c \
+				ft_lstdelone.c \
+				ft_lstiter.c \
+				ft_lstlast.c \
+				ft_lstmap.c \
+				ft_lstnew.c \
+				ft_lstsize.c \
+				ft_memchr.c \
+				ft_memcmp.c \
+				ft_memcpy.c \
+				ft_memmove.c \
+				ft_memset.c \
+				ft_putchar_fd.c \
+				ft_putendl_fd.c \
+				ft_putnbr_fd.c \
+				ft_putstr_fd.c \
+				ft_split.c \
+				ft_strchr.c \
+				ft_strdup.c \
+				ft_striteri.c \
+				ft_strjoin.c \
+				ft_strlcat.c \
+				ft_strlcpy.c \
+				ft_strlen.c \
+				ft_strmapi.c \
+				ft_strncmp.c \
+				ft_strnstr.c \
+				ft_strrchr.c \
+				ft_strtrim.c \
+				ft_substr.c \
+				ft_tolower.c \
+				ft_toupper.c
 
 # Extra utility functions
 
-SRC_EX		=	ft_abs \
-				ft_atoi_base \
-				ft_copy_split \
-				ft_dlstadd \
-				ft_dlstclear \
-				ft_dlstdelone \
-				ft_dlstmoveone \
-				ft_dlstnew \
-				ft_evil_calloc \
-				ft_evil_malloc \
-				ft_free_split \
-				ft_latoi \
-				ft_litoa \
-				ft_max \
-				ft_min \
-				ft_print_memory \
-				ft_print_memory_plus \
-				ft_put_split \
-				ft_put_strarray \
-				ft_split_add \
-				ft_split_rm \
-				ft_splitlen \
-				ft_stringcopy \
-				ft_swap \
-				ft_uabsdif \
-				ft_umax \
-				ft_umin \
-				ft_uswap
+SRC_EX		=	ft_abs.c \
+				ft_atoi_base.c \
+				ft_copy_split.c \
+				ft_dlstadd.c \
+				ft_dlstclear.c \
+				ft_dlstdelone.c \
+				ft_dlstmoveone.c \
+				ft_dlstnew.c \
+				ft_evil_calloc.c \
+				ft_evil_malloc.c \
+				ft_free_split.c \
+				ft_latoi.c \
+				ft_litoa.c \
+				ft_max.c \
+				ft_min.c \
+				ft_print_memory.c \
+				ft_print_memory_plus.c \
+				ft_put_split.c \
+				ft_put_strarray.c \
+				ft_split_add.c \
+				ft_split_rm.c \
+				ft_splitlen.c \
+				ft_stringcopy.c \
+				ft_swap.c \
+				ft_uabsdif.c \
+				ft_umax.c \
+				ft_umin.c \
+				ft_uswap.c
 
 # Get next line functions
 
-SRC_GNL		=	get_next_line \
-				get_next_line_utils
+SRC_GNL		=	get_next_line.c \
+				get_next_line_utils.c
 
 # ft_printf functions
 
-SRC_PF		= 	ft_colour_1 \
-				ft_colour_2 \
-				ft_padding \
-				ft_printf_utils \
-				ft_printf \
-				ft_printformat \
-				ft_string_basebig \
-				ft_string_binocthex \
-				ft_string_colour \
-				ft_string_hexabig \
-				ft_string_hexasmall \
-				ft_string_integer \
-				ft_string_pointer \
-				ft_string_string \
-				ft_string_unsigned
+SRC_PF		= 	ft_printf.c \
+				ft_vprintf.c \
+				ft_fixed.c \
+				ft_fixprec.c \
+				ft_fixtoa.c \
+				ft_fixtoa2.c \
+				ft_init0.c \
+				ft_init1.c \
+				ft_init2.c \
+				ft_init3.c \
+				ft_init4.c \
+				ft_process_list.c \
+				ft_process_colours.c \
+				ft_process_unsigned.c \
+				ft_process_other.c \
+				ft_join_strings.c \
+				ft_utils.c \
+				ft_utils_str_free.c \
+				ft_utils_pad.c \
+				ft_utils_flags_prec_width.c
 
 # Formating
 
@@ -166,15 +171,16 @@ PRINT2		=	for num in `seq 1 $(BAR_LENGTH)` ; do \
 
 # Objects
 
-OBJ			=	$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_LIB))) \
-				$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_EX))) \
-				$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_GNL))) \
-				$(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_PF)))
+OBJ			=	$(addprefix $(OBJ_DIR), $(SRC_LIB:.c=.o)) \
+				$(addprefix $(OBJ_DIR), $(SRC_EX:.c=.o)) \
+				$(addprefix $(OBJ_DIR), $(SRC_GNL:.c=.o)) \
+				$(addprefix $(OBJ_DIR), $(SRC_PF:.c=.o))
 
 # RULES
 
 all:			announce $(NAME)
 
+bonus:			all
 #				@$(PRINT2)
 #				@$(PRINT1)
 #				@$(ECHO) All done
@@ -188,7 +194,7 @@ announce:
 
 # COMPILATION
 
-$(OBJ_DIR)%.o:	$(SRC_LIB_DIR)%.c # start_msg
+$(OBJ_DIR)%.o:	$(SRC_LIB_DIR)%.c $(INCS)
 				@mkdir -p $(OBJ_DIR)
 				@$(SLEEP)
 				@echo "$(RETURN)$(RETURN)$(YELLOW)Compiling Libft: $< $(NRM_FORMAT)"
@@ -197,7 +203,7 @@ $(OBJ_DIR)%.o:	$(SRC_LIB_DIR)%.c # start_msg
 				@$(CC) $(CFLAGS) -c $< -o $@
 				@$(ECHO)
 
-$(OBJ_DIR)%.o:	$(SRC_EX_DIR)%.c
+$(OBJ_DIR)%.o:	$(SRC_EX_DIR)%.c $(INCS)
 				@mkdir -p $(OBJ_DIR)
 				@$(SLEEP)
 				@echo "$(RETURN)$(RETURN)$(YELLOW)Compiling extras: $< $(NRM_FORMAT)"
@@ -206,7 +212,7 @@ $(OBJ_DIR)%.o:	$(SRC_EX_DIR)%.c
 				@$(CC) $(CFLAGS) -c $< -o $@
 				@$(ECHO)
 
-$(OBJ_DIR)%.o:	$(SRC_GNL_DIR)%.c # lib_msg
+$(OBJ_DIR)%.o:	$(SRC_GNL_DIR)%.c $(INCS)
 				@mkdir -p $(OBJ_DIR)
 				@$(SLEEP)
 				@echo "$(RETURN)$(RETURN)$(YELLOW)Compiling get next line: $< $(NRM_FORMAT)"
@@ -215,7 +221,7 @@ $(OBJ_DIR)%.o:	$(SRC_GNL_DIR)%.c # lib_msg
 				@$(CC) $(CFLAGS) -c $< -o $@
 				@$(ECHO)
 
-$(OBJ_DIR)%.o:	$(SRC_PF_DIR)%.c # gnl_msg
+$(OBJ_DIR)%.o:	$(SRC_PF_DIR)%.c $(INCS)
 				@mkdir -p $(OBJ_DIR)
 				@$(SLEEP)
 				@echo "$(RETURN)$(RETURN)$(YELLOW)Compiling ft printf: $< $(NRM_FORMAT)"
@@ -224,7 +230,7 @@ $(OBJ_DIR)%.o:	$(SRC_PF_DIR)%.c # gnl_msg
 				@$(CC) $(CFLAGS) -c $< -o $@
 				@$(ECHO)
 
-$(NAME): 		$(OBJ) # pf_msg
+$(NAME): 		$(OBJ)
 				@echo "$(RETURN)$(RETURN)$(RETURN)$(GREEN)LIBFT compilation complete!$(NRM_FORMAT)"
 				@$(LIBC) $(NAME) $(OBJ)
 				@$(PRINT2)
@@ -259,4 +265,4 @@ re: fclean all
 
 # Phony stuff for rules
 
-.PHONY: all announce clean fclean re
+.PHONY: all announce clean fclean re bonus
